--- a/index.html
+++ b/index.html
@@ -130,8 +130,10 @@
                                 </a>
                             </div>
                             <div class="works05 proj-li">
-                                <span class="proj-tit">Coming Soon</span>
-                            </div>
+				<a href="https://kimgyury.github.io/HanssemCompany/">
+                               	 <span class="proj-tit">(주)한샘</span>
+				</a>
+                            </div>				
                             <div class="works06 proj-li">
                                 <span class="proj-tit">Coming Soon</span>
                             </div>
