--- a/index.html
+++ b/index.html
@@ -130,13 +130,17 @@
                                 </a>
                             </div>
                             <div class="works05 proj-li">
-				<a href="https://kimgyury.github.io/HanssemCompany/">
-                               	 <span class="proj-tit">(주)한샘</span>
-				</a>
-                            </div>				
-                            <div class="works06 proj-li">
-                                <span class="proj-tit">Coming Soon</span>
+								<a href="https://kimgyury.github.io/HanssemCompany/">
+                                <span class="proj-tit">(주)한샘</span>
+								</a>
                             </div>
+							
+                            <div class="works06 proj-li">
+								<a href="https://kimgyury.github.io/HanssemMall/">
+                                <span class="proj-tit">한샘 인테리어몰</span>
+								</a>
+                            </div>
+							
                             <div class="works07 proj-li">
                                 <span class="proj-tit">Coming Soon</span>
                             </div>
