--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                             <p class="tit">활용가능한<b> SKILLS</b></p>
 <!--								을<span class="ch_b">사용하는</span>-->
                             <p class="comment"><b>Adobe</b><br>AcrobatDC<br>Illustrator<br>
-								Photoshop<br>InDesign<br>After Effects<br>Premiere Pro<br><br>
+								Photoshop<br>Dreamweaver<br>InDesign<br>After Effects<br>Premiere Pro<br><br>
 								<b>Another</b><br>ITQ<br>html<br>CSS<br>JavaScript<br>jQuery<br>
 								
 <!--
