--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 <!--								을<span class="ch_b">사용하는</span>-->
                             <p class="comment"><b>Adobe</b><br>AcrobatDC<br>Illustrator<br>
 								Photoshop<br>Dreamweaver<br>InDesign<br>After Effects<br>Premiere Pro<br><br>
-								<b>Another</b><br>ITQ<br>html<br>CSS<br>JavaScript<br>jQuery<br>
+								<b>Another</b><br>ITQ<br>html<br>CSS<br>jQuery<br>JavaScript<br>
 								
 <!--
 								<br>또한 디지털디자인의 범주를 넘어 <br>래퍼런스,기획안,촬영 등을 진행하며 
